Add Delete and missing endpoint
