# backend/routes/user.js
@@ -27,15 +27,15 @@ router.post('/signup', signupUser);
 
 // Protected routes
 router.use(requireAuth);
-router.use(rolePermissions(["user", "admin"]));
+router.use(rolePermissions(['user', 'admin']));
 router.get('/get-products/:_id', getUserProducts);
 router.put('/update', updateUser);
 router.get('/favourites', getFavourites);
 router.post('/favourites/add', addToFavourites);
-router.post('/favourites/remove', removeFromFavourites);
+router.delete('/favourites/:_id', removeFromFavourites);
 router.patch('/update-order-info', updateOrderInfo);
 
-router.use(rolePermissions(["admin"]));
+router.use(rolePermissions(['admin']));
 router.get('/', getUsers);
 router.patch('/change-role', changeRole);
 
