# backend/swagger/swagger.yaml
@@ -271,8 +271,8 @@ paths:
           description: Unauthorized
         '404':
           description: User not found or Product not found in favourites
-  /users/favourites/remove:
-    post:
+  /users/favourites/:_id:
+    delete:
       summary: Remove Product from Favourites
       tags:
         - Users
@@ -281,14 +281,10 @@ paths:
       produces:
         - application/json
       parameters:
-        - name: body
-          in: body
+        - name: _id
+          in: path
           required: true
-          schema:
-            type: object
-            properties:
-              productId:
-                type: string
+          type: string
       responses:
         '200':
           description: Product removed from favourites successfully
@@ -320,6 +316,60 @@ paths:
           description: Unauthorized
         '404':
           description: User not found or Product not found in favourites
+  /users/get-products/:_id:
+    get:
+      summary: Get User's Products
+      tags:
+        - Users
+      produces:
+        - application/json
+      parameters:
+        - name: _id
+          in: path
+          required: true
+          type: string
+      responses:
+        '200':
+          description: User's products fetched successfully
+          schema:
+            type: array
+            items:
+              type: object
+              properties:
+                _id:
+                  type: string
+                name:
+                  type: string
+                description:
+                  type: string
+                price:
+                  type: number
+                category:
+                  type: string
+                brand:
+                  type: string
+                imageUrls:
+                  type: array
+                  items:
+                    type: string
+                rating:
+                  type: number
+                reviewsNumber:
+                  type: number
+                unitsInStock:
+                  type: number
+                createdAt:
+                  type: string
+                  format: date-time
+                updatedAt:
+                  type: string
+                  format: date-time
+                __v:
+                  type: number
+        '401':
+          description: Unauthorized
+        '404':
+          description: User not found
   /users/change-role:
     patch:
       summary: Change User Role (Admin Only)
@@ -493,7 +543,7 @@ paths:
             $ref: '#/definitions/Product'
 
   /products/remove-from-sale:
-    post:
+    delete:
       summary: Remove product from sale
       tags:
         - Products
